odoo/odoo-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: od-ha-test
    tier: frontend
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-default-od-ha-test
  name: od-ha-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: od-ha-test
      app.kubernetes.io/name: odoo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2023-05-25T11:09:59Z"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: od-ha-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: odoo
        helm.sh/chart: odoo-23.2.4
    spec:
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: ALLOW_EMPTY_PASSWORD
          value: "no"
        - name: ODOO_DATABASE_HOST
          value: pg-ha-test
        - name: ODOO_DATABASE_PORT_NUMBER
          value: "5432"
        - name: ODOO_DATABASE_NAME
          value: odoo
        - name: ODOO_DATABASE_USER
          value: odoo
        - name: ODOO_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: pg-ha-test-secrets
              name: postgresql-password
        - name: ODOO_EMAIL
          value: eieicyl@gmail.com
        - name: ODOO_PASSWORD
          valueFrom:
            secretKeyRef:
              key: pg-ha-test-secrets
              name: postgresql-password
        - name: ODOO_SKIP_BOOTSTRAP
          value: "no"
        - name: ODOO_LOAD_DEMO_DATA
          value: "no"
        - name: ODOO_SMTP_HOST
          value: relay.mailbaby.net
        - name: ODOO_SMTP_PORT_NUMBER
          value: "25"
        - name: ODOO_SMTP_USER
          value: mb16635
        - name: ODOO_SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: smtp-password
              name: od-ha-test
        image: docker.io/bitnami/odoo:16.0.20230515-debian-11-r3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /web/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 600
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: od-ha-test
        ports:
        - containerPort: 8069
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /web/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 800m
            memory: 5Gi
          requests:
            cpu: 300m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /bitnami/odoo
          name: odoo-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: od-ha-test
      serviceAccountName: od-ha-test
      terminationGracePeriodSeconds: 30
      volumes:
      - name: odoo-data
        persistentVolumeClaim:
          claimName: harvestpei-odoo
